--- a/index.html
+++ b/index.html
@@ -1,42 +1,80 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>イヤホンジャックの向こう側</title>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
+    <title>TIMER</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <header>
-        <h1>COCOA</h1>
-      </header>
-      <div class="content">
-        <section class="information">
-          <h1>イヤホンジャックの向こう側</h1>
-          <p class="type">Album</p>
-          <div class="description">
-            <img src="img/jacket.png" alt="イヤホンジャックの向こう側のジャケット写真">
-            <p>COCOA ４枚目のアルバムとなる今作。ジャケットデザインに色鉛筆画家の「カタヒラシュンシ」氏を迎え、音楽と絵のコラボを実現させた一枚。</p>
-            <p>HONDA CARS 静岡CM タイアップの「キミのうた」をはじめ、完全書き下ろしの新曲３曲を含む全６曲を収録。<br>
-            <p>イヤホンジャックの向こう側に広がる世界を、ぜひご堪能ください。</p>
-          </div>
-        </section>
-        <section class="songs">
-          <h2>収録曲</h2>
-          <ol class="clearfix">
-            <li><a href="https://youtu.be/vjqTkOISzeY" target="_blank">C#</a></li>
-            <li>ワンルームファッションショー</li>
-            <li>ハッピータイム</li>
-            <li>シャンディガフ</li>
-            <li>僕は知らない</li>
-            <li>キミのうた</li>
-          </ol>
-        </section>
-      </div>
-      <footer>
-        &copy; COCOA
-      </footer>
+        <p id="timer">00:00:00</p>
+        <div>
+            <button id="start_stop" class="btn btn-lg btn-primary">START</button>
+        </div>
+        <script>
+
+            //グローバル変数を定義
+            var start
+
+            //ゼロを付ける関数
+            var addZero = function(value){
+                if (value<10){
+                    value = "0"+value;
+                }
+                return value;            
+            }
+
+            var timer_id;
+            //イベントドリブンにする
+            document.getElementById('start_stop').addEventListener('click',function(){
+                if (this.innerHTML == 'START'){
+                    //スタート用インスタンス作成
+                    start = new Date();
+
+                    timer_id = setInterval(goTimer,10);
+
+                    //トグルボタンにする
+                    this.innerHTML = 'STOP';
+                    this.classList.remove('btn-primary');
+                    this.classList.add('btn-danger');
+                } else{
+                    clearInterval(timer_id);
+                    this.innerHTML = 'START';
+                    this.classList.remove('btn-danger');
+                    this.classList.add('btn-primary');
+                }
+            });
+            //タイマー処理
+            var goTimer = function(){
+                //ストップ用インスタンス
+                var now = new Date();
+
+                var milli = now.getTime()-start.getTime();
+                var seconds = Math.floor(milli/1000);
+                var minutes = Math.floor(seconds/60);
+                var hours = Math.floor(minutes/60);
+
+                seconds = seconds - minutes*60;
+                minutes = minutes - hours*60;
+
+                //表示
+                document.getElementById('timer').innerHTML 
+                = addZero(hours) + ':' + addZero(minutes) + ':' + addZero(seconds);
+               
+            }
+
+            
+        </script>
     </div>
-  </body>
+</body>
 </html>
